--- a/CadastroClientes/index.html
+++ b/CadastroClientes/index.html
@@ -16,11 +16,11 @@
         <input type="text" id="celular"  placeholder="Celular" required>
         <input type="text" id="cep"  placeholder="CEP" required>
 
-        <input type="text" id="logradouro" placeholder="Rua" required>
+        <input type="text" id="logradouro" placeholder="Rua" readonly>
         <input type="text" id="numero" placeholder="Número" required>
-        <input type="text" id="bairro" placeholder="Bairro" required>
-        <input type="text" id="cidade" placeholder="Cidade" required>
-        <input type="text" id="uf" placeholder="Estado (UF)" required>
+        <input type="text" id="bairro" placeholder="Bairro" readonly>
+        <input type="text" id="cidade" placeholder="Cidade" readonly>
+        <input type="text" id="uf" placeholder="Estado (UF)" readonly>
 
         <div class="buttons">
             <button type="submit" id="salvar">Salvar</button>
